mvp plus jump with bugs

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   padding: 20px 0px;
   overflow: hidden;
   position: relative;
-  background-image: url(./images/361e5b367517ea40aa1dc79e8e585d4a.png);
+  background-image: url(./images/background2.png);
   height: 30em;
   animation: slide 3s linear infinite;
 }
